# KLStream

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  check_correlation.py  docker-compose.yml  generate_notebook.py  report.md
adaptive_window/: CMakeLists.txt  harness.cpp  main.cpp  train_forest.cpp
analysis/: aggregate_results.py  bench_inference_scaling.py  calibrate_speed.py  compute_metrics.py  plot_experiment4.py  plot_hysteresis.py  plot_pareto.py  results_notebook.ipynb  run_experiment4.py  run_experiment5.py  run_experiments.py  validate_forest.py
benchmarks/: CMakeLists.txt  bench_pipeline_throughput.cpp  bench_spsc_queue.cpp  bench_ysb.cpp  latency_benchmark.cpp  throughput_benchmark.cpp
cmake/: klstream-config.cmake.in
examples/: CMakeLists.txt  simple_pipeline.cpp
examples/basic_pipeline/: main.cpp
examples/yahoo_streaming_benchmark/: main.cpp
include/klstream/: klstream.hpp
include/klstream/core/: backpressure.hpp  config.hpp  event.hpp  metrics.hpp  mpmc_queue.hpp  operator.hpp  pinning.hpp  queue.hpp  runtime.hpp  scheduler.hpp  spsc_queue.hpp  worker.hpp  worker_pool.hpp
include/klstream/model/: isolation_forest.hpp
include/klstream/operators/: aggregate.hpp  filter.hpp  map.hpp  sink.hpp  source.hpp  window.hpp
include/klstream/window/: adaptive_window_op.hpp  data_driven_window_op.hpp  financial_tick_source.hpp  inference_op.hpp  result_sink.hpp  types.hpp
paper/: draft.md
preprocessing/: preprocess_lobster.py  synthetic_generator.py  train_forest_reference.py  validate_forest.py
research/: CMakeLists.txt
research/adaptive_backpressure/: CMakeLists.txt  main.cpp  run_experiment.sh
research/core_pinning/: CMakeLists.txt  main.cpp
research/results/: bp_adaptive_q1024_high.csv  bp_adaptive_q1024_low.csv  bp_adaptive_q1024_medium.csv  bp_adaptive_q256_high.csv  bp_adaptive_q256_low.csv  bp_adaptive_q256_medium.csv  bp_adaptive_q4096_high.csv  bp_adaptive_q4096_low.csv  bp_adaptive_q4096_medium.csv  bp_baseline_q1024_high.csv  bp_baseline_q1024_low.csv  bp_baseline_q1024_medium.csv  bp_baseline_q256_high.csv  bp_baseline_q256_low.csv  bp_baseline_q256_medium.csv  bp_baseline_q4096_high.csv  bp_baseline_q4096_low.csv  bp_baseline_q4096_medium.csv  pipeline_throughput.csv  spsc_queue.csv  ysb.csv
scripts/: dev.sh  run_all_benchmarks.sh
src/core/: metrics.cpp  runtime.cpp  scheduler.cpp  worker_pool.cpp
tests/: CMakeLists.txt  integration_test.cpp  operator_test.cpp  queue_test.cpp  test_backpressure.cpp  test_mpmc_queue.cpp  test_operators.cpp  test_pipeline_integration.cpp  test_spsc_queue.cpp
